--- a/finalassessment/test-output/index.html
+++ b/finalassessment/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-405622828\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-12435691\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,22 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Login into App&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Login into App", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunnertest" class="method navigator-link" hash-for-method="runScenario(&quot;create a new article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("create a new article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Delete an article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Delete an article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunnertest" class="method navigator-link" hash-for-method="runScenario(&quot;Delete an article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Delete an article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;create a new article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("create a new article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunnertest" class="method navigator-link" hash-for-method="runScenario(&quot;Login into App&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Login into App", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Update an article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Update an article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunnertest" class="method navigator-link" hash-for-method="runScenario(&quot;Update an article&quot;, &quot;Conduit CRUD Feature&quot;)">runScenario("Update an article", "Conduit CRUD Feature")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,15 +136,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">runners.TestRunner</span>
+              <span class="class-name">runners.TestRunnertest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Login into App&quot;, &quot;Conduit CRUD Feature&quot;)">
-                  </a> <!-- runScenario("Login into App", "Conduit CRUD Feature") -->
+                  <a name="runScenario(&quot;create a new article&quot;, &quot;Conduit CRUD Feature&quot;)">
+                  </a> <!-- runScenario("create a new article", "Conduit CRUD Feature") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Login into App","Conduit CRUD Feature")</span>
+                  <span class="parameters">("create a new article","Conduit CRUD Feature")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -161,10 +161,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;create a new article&quot;, &quot;Conduit CRUD Feature&quot;)">
-                  </a> <!-- runScenario("create a new article", "Conduit CRUD Feature") -->
+                  <a name="runScenario(&quot;Login into App&quot;, &quot;Conduit CRUD Feature&quot;)">
+                  </a> <!-- runScenario("Login into App", "Conduit CRUD Feature") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("create a new article","Conduit CRUD Feature")</span>
+                  <span class="parameters">("Login into App","Conduit CRUD Feature")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -184,7 +184,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-405622828\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-12435691\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -193,7 +193,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;runners.TestRunner&quot;/&gt;
+      &lt;class name=&quot;runners.TestRunnertest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -244,25 +244,25 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'runners.TestRunner')
-data.setCell(0, 3, 1740);
+data.setCell(0, 2, 'runners.TestRunnertest')
+data.setCell(0, 3, 1628);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'runners.TestRunner')
-data.setCell(1, 3, 1392);
+data.setCell(1, 2, 'runners.TestRunnertest')
+data.setCell(1, 3, 1263);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'runners.TestRunner')
-data.setCell(2, 3, 746);
+data.setCell(2, 2, 'runners.TestRunnertest')
+data.setCell(2, 3, 774);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
-data.setCell(3, 2, 'runners.TestRunner')
-data.setCell(3, 3, 591);
+data.setCell(3, 2, 'runners.TestRunnertest')
+data.setCell(3, 3, 331);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -288,30 +288,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">runners.TestRunner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">runners.TestRunnertest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@1450131a)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@40f35e52)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Login into App", "Conduit CRUD Feature")</span>
-                <span class="method-start">4863 ms</span>
+                <span class="method-start">5156 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("create a new article", "Conduit CRUD Feature")</span>
-                <span class="method-start">6610 ms</span>
+                <span class="method-start">6789 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Update an article", "Conduit CRUD Feature")</span>
-                <span class="method-start">8004 ms</span>
+                <span class="method-start">8056 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Delete an article", "Conduit CRUD Feature")</span>
-                <span class="method-start">8755 ms</span>
+                <span class="method-start">8835 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">9351 ms</span>
+                <span class="method-start">9173 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
